--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -65,8 +65,8 @@
     cursor: pointer;
 }
 
-.nav-login-cart button :active{
-background: #ed6f6ff3;
+.nav-login-cart button :active {
+    background: #ed6f6ff3;
 }
 
 .nav-cart-count {
@@ -82,4 +82,50 @@ background: #ed6f6ff3;
     background: red;
     color: rgb(206, 203, 203);
 
+}
+
+.user-pic {
+    height: 48px;
+    border-radius: 31px;
+}
+
+.sub-menu-wrap {
+    position: absolute;
+    top: 14%;
+    right: 10%;
+    width: 320px;
+
+}
+
+.sub-menu {
+    background: #fff;
+    padding: 20px;
+    margin: 10px;
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-info-pic {
+    height: 38px;
+}
+
+.user-info h4 {
+    font-weight: 500;
+}
+
+.user-info img {
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 15px;
+
+}
+.user-info hr {
+  border: 0;
+  height: 1px;
+  width: 100%;
+  background: #ccc;
+  margin: 15px;
 }
